--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "simplifyed-game-engine",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {},
+  "scripts": {
+    "format": "prettier --write src"
+  },
+  "prettier": {
+    "semi": false
+  },
+  "dependencies": {
+    "@types/howler": "^2.2.7",
+    "howler": "^2.2.3"
+  },
   "devDependencies": {
     "esbuild": "^0.14.49",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
 }
