--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "simplifyed-game-engine",
   "version": "1.0.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
-    "format": "prettier --write src"
+    "format": "prettier --write src",
+    "build": "gulp build",
+    "start": "gulp watch"
   },
   "prettier": {
     "semi": false
@@ -14,7 +17,11 @@
   },
   "devDependencies": {
     "esbuild": "^0.14.49",
+    "esm": "^3.2.25",
+    "gulp": "^4.0.2",
+    "gulp-esbuild": "^0.10.4",
     "prettier": "^2.7.1",
+    "reload": "^3.2.0",
     "typescript": "^4.7.4"
   }
 }
