--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "format": "prettier --write src",
+    "format": "prettier --write src gulpfile.js public",
     "build": "gulp build",
     "start": "gulp watch",
     "test": "tsc --noEmit"
