add Vector and children classes, update Sprite class

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "semi": false
   },
   "dependencies": {
+    "@ghom/event-emitter": "^1.1.0",
     "howler": "^2.2.3"
   },
   "devDependencies": {
