--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2020",
     "strict": true,
+    "moduleResolution": "Node"
   },
   "exclude": [
     "node_modules"
